improve triggered zones template sensor

--- a/packages/alarm.yaml
+++ b/packages/alarm.yaml
@@ -156,17 +156,22 @@ sensor:
     sensors: 
       armed_home:
         friendly_name: Armed Home
-        value_template: "{%- for entity_id in states.group.armed_home.attributes.entity_id if states(entity_id) == 'on' -%}
-                        {% set parts = entity_id.split('.') -%}
-                        {% set sensor_name  = (states[parts[0]][parts[1]].name | replace(' - alarm',''))    %}
-                        {%- if loop.first %}{% elif loop.last %} and the {% else %}, the {% endif -%}{% if ('DOORS' in sensor_name|upper or 'WINDOWS' in sensor_name|upper ) %}{{ sensor_name }} opened{% elif ('DOOR' in sensor_name|upper or 'WINDOW' in sensor_name|upper ) %}{{ sensor_name }} opened{% else %}{{ sensor_name }} triggered{% endif %}
-                        {%- endfor %}"
+        value_template: >-
+          {%- for entity_id in states.group.armed_home.attributes.entity_id if states(entity_id) == 'on' -%}
+          {% set parts = entity_id.split('.') -%}
+          {% set sensor_name  = (states[parts[0]][parts[1]].name | replace(' - alarm',''))    %}
+          {%- if loop.first %}{% elif loop.last %} {{- '\n' -}} {% else %} {{- '\n' -}} {% endif -%}
+          {% if ('DOORS' in sensor_name|upper or 'WINDOWS' in sensor_name|upper ) %}{{ sensor_name }} opened{% elif ('DOOR' in sensor_name|upper or 'WINDOW' in sensor_name|upper ) %}{{ sensor_name }} opened{% else %}{{ sensor_name }} triggered{% endif %}
+          {%- endfor %}
+
   - platform: template
     sensors: 
       armed_away:
         friendly_name: Armed Away
-        value_template: "{%- for entity_id in states.group.armed_away.attributes.entity_id if states(entity_id) == 'on' -%}
-                        {% set parts = entity_id.split('.') -%}
-                        {% set sensor_name  = (states[parts[0]][parts[1]].name | replace(' - alarm',''))    %}
-                        {%- if loop.first %}{% elif loop.last %} and the {% else %}, the {% endif -%}{% if ('DOORS' in sensor_name|upper or 'WINDOWS' in sensor_name|upper ) %}{{ sensor_name }} opened{% elif ('DOOR' in sensor_name|upper or 'WINDOW' in sensor_name|upper ) %}{{ sensor_name }} opened{% else %}{{ sensor_name }} triggered{% endif %}
-                        {%- endfor %}"
+        value_template: >-
+          {%- for entity_id in states.group.armed_away.attributes.entity_id if states(entity_id) == 'on' -%}
+          {% set parts = entity_id.split('.') -%}
+          {% set sensor_name  = (states[parts[0]][parts[1]].name | replace(' - alarm',''))    %}
+          {%- if loop.first %}{% elif loop.last %} {{- '\n' -}} {% else %} {{- '\n' -}} {% endif -%}
+          {% if ('DOORS' in sensor_name|upper or 'WINDOWS' in sensor_name|upper ) %}{{ sensor_name }} opened{% elif ('DOOR' in sensor_name|upper or 'WINDOW' in sensor_name|upper ) %}{{ sensor_name }} opened{% else %}{{ sensor_name }} triggered{% endif %}
+          {%- endfor %}
