--- a/packages/vacuum.yaml
+++ b/packages/vacuum.yaml
@@ -33,6 +33,25 @@ sensor:
           Area: {{ states.vacuum.rockrobo.attributes.last_run_stats.area }} m2{{- '\n' -}}
           Start time: {{ (states.vacuum.rockrobo.attributes.last_run_stats.startTime/1000)|timestamp_local }}{{- '\n' -}}
           End time: {{ (states.vacuum.rockrobo.attributes.last_run_stats.endTime/1000)|timestamp_local }}{{- '\n' -}}
+          {{- '\n' -}}
+          {%- if states.vacuum.rockrobo.attributes.mainBrush|int < 10 %}Main Brush needs cleaning! {{ states.vacuum.rockrobo.attributes.mainBrush }} hours left {{- '\n' -}}{% endif %}
+          {%- if states.vacuum.rockrobo.attributes.sideBrush|int < 10 %}Side Brush needs cleaning! {{ states.vacuum.rockrobo.attributes.sideBrush }} hours left {{- '\n' -}}{% endif %}
+          {%- if states.vacuum.rockrobo.attributes.filter|int < 10 %}Filter needs cleaning! {{ states.vacuum.rockrobo.attributes.filter }} hours left {{- '\n' -}}{% endif %}
+          {%- if states.vacuum.rockrobo.attributes.sensor|int < 10 %}Sensors needs cleaning! {{ states.vacuum.rockrobo.attributes.sensor }} hours left {{- '\n' -}}{% endif %}
+  - platform: template
+    sensors: 
+      vacuum_valetudo_state:
+        friendly_name: Vacuum Valetudo State
+        value_template: >-
+          {{ states.vacuum.rockrobo.attributes.valetudo_state.name }}
+
+binary_sensor:
+  - platform: template
+    sensors: 
+      vacuum_finished_cleaning:
+        friendly_name: Vacuum finished cleaning
+        value_template: >-
+          {{ states.vacuum.rockrobo.attributes.last_run_stats.finishedFlag }}
 
 automation:
   ### Notify state change
@@ -147,6 +166,31 @@ automation:
         message: >
           Vacuum Robot failed to dock!
 
+  ### Notify error state
+  - alias: Notify when Robot State Error
+    description: Notify when Robot State Error
+    trigger:
+    - entity_id: sensor.vacuum_valetudo_state
+      platform: state
+      to: 'Error'
+    condition: []
+    action:
+    - service: notify.slack
+      data_template:
+        data:
+          icon: ":robot_face:"
+          username: "Vacuum Robot"
+          blocks_template:
+            - type: section
+              text:
+                type: mrkdwn
+                text: >
+                  Vacuum Robot Error - Check out why!
+        title: 'Vacuum Robot'
+        target: ["#general"]
+        message: >
+          Vacuum Robot Error - Check out why!
+
   ### Notify last clean results
   - alias: Notify when Robot State Change
     description: Notify when Robot State Change
@@ -155,6 +199,9 @@ automation:
       platform: state
       from: 'cleaning'
       to: 'returning'
+    - entity_id: binary_sensor.vacuum_finished_cleaning
+      platform: state
+      to: 'on'
     condition: []
     action:
     - service: script.notify_robot_cleaning_stats
