--- a/packages/light_triggers_front_garage.yaml
+++ b/packages/light_triggers_front_garage.yaml
@@ -16,7 +16,7 @@ automation:
   action:
     service: light.turn_off
     data:
-      entity_id: light.shelly_front_garage
+      entity_id: light.front_garage
 
 # Open/Close = Start timer
 - alias: Turn on front garage lights when door opened or closed
@@ -38,7 +38,7 @@ automation:
   - service: light.turn_on
     data:
       entity_id:
-        - light.shelly_front_garage
+        - light.front_garage
   - service: timer.start
     data:
       entity_id: timer.front_garage_light
