--- a/packages/light_triggers_illumination.yaml
+++ b/packages/light_triggers_illumination.yaml
@@ -8,5 +8,5 @@
 #  - service: light.turn_off
 #    data:
 #      entity_id:
-#        - light.shelly_lounge
-#        - light.shelly_kitchen
+#        - light.lounge
+#        - light.kitchen
