--- a/packages/tasmota_zigbee_action.yaml
+++ b/packages/tasmota_zigbee_action.yaml
@@ -24,6 +24,17 @@ automation:
           entity_id: light.sonoff_master_bathroom_1
 
   # Lounge button
+  - alias: 'MQTT Zigbee Button Main Bathroom hold action'
+    initial_state: true
+    trigger:
+      - platform: mqtt
+        topic: 'tele/zigbee/0x4C00/Action'
+        payload: 'hold'
+    action:
+      - service: automation.trigger
+        data:
+          entity_id:
+            - automation.set_lights_when_plex_kodi_is_playing
   - alias: 'MQTT Zigbee Button Main Bathroom single click'
     initial_state: true
     trigger:
@@ -31,7 +42,7 @@ automation:
         topic: 'tele/zigbee/0x4C00/Click'
         payload: 'single'
     action:
-      - service: automation.trigger
+      - service: light.turn_off
         data:
           entity_id:
-            - automation.set_lights_when_plex_kodi_is_playing
+            - light.lounge
