--- a/packages/geysers.yaml
+++ b/packages/geysers.yaml
@@ -33,6 +33,10 @@ automation:
       - platform: state
         entity_id: switch.main_bathroom_geyser
         to: 'on'
+    condition:
+      - condition: state
+        entity_id: input_boolean.homeassistant_recently_started
+        state: 'off'    
     action:
     - service: timer.start
       data_template:
@@ -69,6 +73,10 @@ automation:
       - platform: state
         entity_id: switch.front_bathroom_geyser
         to: 'on'
+    condition:
+      - condition: state
+        entity_id: input_boolean.homeassistant_recently_started
+        state: 'off'
     action:
     - service: timer.start
       data_template:
