--- a/packages/mail.yaml
+++ b/packages/mail.yaml
@@ -33,9 +33,17 @@ automation:
         data_template:
           target: ["#alerts-david"]
           message: >
-            Name: {{ trigger.event.data.new_state.attributes.tracking_number}} {{ trigger.event.data.new_state.attributes.friendly_name | replace("Seventeentrack Package: ","") }}{{- '\n' -}}
-            {% if trigger.event.data.new_state.attributes.location != '' %}Location: {{ trigger.event.data.new_state.attributes.location }}{{- '\n' -}}{% endif %}
-            {% if trigger.event.data.new_state.attributes.info_text != '' %}Event: {{ trigger.event.data.new_state.attributes.info_text }}{{- '\n' -}}{% endif %}
+            Name: {{ trigger.event.data.new_state.attributes.tracking_number}} {{ trigger.event.data.new_state.attributes.friendly_name | replace("Seventeentrack Package: ","") }}
+            {% if trigger.event.data.new_state.attributes.location != None %}
+            {% if trigger.event.data.new_state.attributes.location != '' %}
+            {{- '\n' -}}Location: {{ trigger.event.data.new_state.attributes.location }}
+            {% endif %}
+            {% endif %}
+            {% if trigger.event.data.new_state.attributes.info_text != None %}
+            {% if trigger.event.data.new_state.attributes.info_text != '' %}
+            {{- '\n' -}}Event: {{ trigger.event.data.new_state.attributes.info_text }}
+            {% endif %}
+            {% endif %}
           data:
             icon: ":envelope:"
             username: "17track mail"
@@ -44,9 +52,17 @@ automation:
                 text:
                   type: mrkdwn
                   text: >
-                    Name: {{ trigger.event.data.new_state.attributes.tracking_number}} {{ trigger.event.data.new_state.attributes.friendly_name | replace("Seventeentrack Package: ","") }}{{- '\n' -}}
-                    Location: {{ trigger.event.data.new_state.attributes.location }}{{- '\n' -}}
-                    Event: {{ trigger.event.data.new_state.attributes.info_text }}{{- '\n' -}}
+                    Name: {{ trigger.event.data.new_state.attributes.tracking_number}} {{ trigger.event.data.new_state.attributes.friendly_name | replace("Seventeentrack Package: ","") }}
+                    {% if trigger.event.data.new_state.attributes.location != None %}
+                    {% if trigger.event.data.new_state.attributes.location != '' %}
+                    {{- '\n' -}}Location: {{ trigger.event.data.new_state.attributes.location }}
+                    {% endif %}
+                    {% endif %}
+                    {% if trigger.event.data.new_state.attributes.info_text != None %}
+                    {% if trigger.event.data.new_state.attributes.info_text != '' %}
+                    {{- '\n' -}}Event: {{ trigger.event.data.new_state.attributes.info_text }}
+                    {% endif %}
+                    {% endif %}
 
 
 # TTS https://community.home-assistant.io/t/17track-integration/167602
