--- a/packages/loadshedding.yaml
+++ b/packages/loadshedding.yaml
@@ -13,25 +13,27 @@ input_boolean:
     name: Loadshedding slot active
 
 timer:
-  # When calling the start service on a timer that is already running, it resets 
-  # the duration it will need to finish and restart the timer without triggering 
-  # a canceled or finished event. This, for example, makes it easy to create 
-  # timed lights that get triggered by motion. Starting a timer triggers a 
-  # started event unless the timer is paused, in that case, it triggers a 
-  # restarted event.
   loadshedding_slot:
     duration: '02:35:00'
 
 automation:
   - alias: start_loadshedding_slot_timer
     trigger:
-      platform: state
-      entity_id: input_boolean.loadshedding_slot_active
-      to: 'on'
+      - platform: state
+        entity_id: input_boolean.loadshedding_slot_active
+        to: 'on'
+      - platform: numeric_state
+        entity_id: input_number.loadshedding_stage_coct
+        above: 0
     condition:
+      # make sure timer not already active
       - condition: state
         entity_id: timer.loadshedding_slot
         state: 'idle'
+      # check conditions for both tiggers
+      - condition: state
+        entity_id: input_boolean.loadshedding_slot_active
+        state: 'on'
       - condition: numeric_state
         entity_id: input_number.loadshedding_stage_coct
         above: 0
